# squirrel-prover

./: .gitattributes  .gitignore  .gitlab-ci.yml  .merlin  CHANGES.md  CONTRIBUTING.md  Debbuging.md  LICENCE.md  LICENSE  Makefile  README.md  _tags  apply.ec  bug.sp  bug2.sp  dune  dune-project  jsexport.ml  macros.tex  main.tex  metabc.odocl  metabc.opam  myocamlbuild.ml  package.json  plot.py  rollup.config.mjs  smt.mli  smt.stub.ml  smt.why3api.ml  squirrel.ml  squirrel.odocl  squirrel.opam  test.ml  todo.txt
app/: LICENSE  README.md  dune  package.json  rollup.config.mjs  tsconfig.json
app/client/: SquirrelWorker.ml  client.ml  cm-extensions.ts  dune  editor.mjs  fileManager.ts  squirrel-worker.ts  squirrel.js
app/client/js_stub/: unix.js
app/client/lang-squirrel/: .gitignore  README.md  package.json  tsconfig.json
app/client/lang-squirrel/src/: complete.ts  index.ts  syntax.grammar
app/client/lang-squirrel/test/: cases.txt  test.js
app/common/: common.ml  dune
app/server/: dune  server.eml.ml
app/static/: dune  editor.bundle.js  squirrel-light.css  theories  visualisation_script.js
app/www/: index.html
app/www/static/: dune  editor.bundle.js  help.css  ide-base.css  jsquirreldoc.css  quick-help.html  squirrel-base.css  squirrel-light.css  theories  visualisation_script.js  visualisation_style.css
app/www/static/theories/: 0-logic.sp  1-crypto-hash.sp  2-crypto-enc.sp  3-hash-lock-auth.sp  4-hash-lock-unlink.sp  5-stateful.sp  6-key-establishment.sp  Basic.sp  Prelude.sp
docker/: Dockerfile  README.md  build.sh
docker/res/: .emacs  proof-site.el
documentation/: index.mld
documentation/sphinx/: Makefile  README.rst  dune
examples/: PQ-x3dh-like.sp  PQsignal_baseHandhshake.sp  PQsignal_baseHandhshakebis.sp  README.md  axiom.mbc  axiom_collision_resistance.mbc  basic-hash-auth.sp  basic-hash-equiv.sp  basic-hash-merged.sp  basic-hash-wa.sp  basic-hash.sp  basic_hash.mbc  basic_hash_equiv.mbc  basic_hash_merged.mbc  basic_hash_merged.sp  block_find.mbc  block_let.mbc  block_name.mbc  block_set.mbc  blocks.mbc  collisions.mbc  compo_signed_ddh.mbc  deduction-ex.sp  deduction.sp  eqnames.mbc  eqnames.sp  equality_propagation.mbc  euf-debug.mbc  euf.mbc  euf_assert.mbc  euf_basic.mbc  euf_key_secrecy.sp  euf_nested.mbc  euf_null.mbc  euf_output.mbc  euf_output2.mbc  euf_output3.mbc  euf_trivial.mbc  eufnull.mbc  feldhofer-light.sp  (+66 more)
examples/PQBrokenTemp/: kemKE_FSXY.sp
examples/basic-tutorial/: help.sp  tutorial-advanced.sp  tutorial.sp
examples/crypto/: basic-hash.sp  global-cpa.sp  hash-lock.sp  nsl.sp  private-authentication.sp
examples/cryptoverif/: README  basic-hash-auth-ROM-Bruno.pvc  basic-hash-auth-collres.pvc  basic-hash-auth-prf.pvc  basic-hash-auth-suf.pvc  basic-hash-auth.pvc  basic-hash-diff.pvc  basic-hash-equiv.pvc  basic-hash-unlink.pcv  basic-hash-v2-hashoracle.pcv  hash-lock-auth-collres.pvc  mw-auth-both.pcv  mw-auth.pcv  mw-complete-diff.pcv  mw-diff.pcv
examples/demo/: ex1.mbc  ex1.sp  ex2.5.sp  ex2.mbc  ex3.mbc  ex3.sp
examples/easycrypt/: README.md  basic-hash-mult-unlink.ec  basic-hash-mult.ec  basic-hash.ec
examples/ho/: Int.sp  Lib.sp  MyInt.sp  authdh.sp  hybrid.sp
examples/movep/: basic-hash-fail.sp  basic-hash-two.sp  basic-hash-wa.sp
examples/postQuantumKE/: PQ-x3dh-like.sp  ikeV1_psk.sp  ikeV1_psk.sp.to_fix  ikeV2_sign.sp  kemKE_BCGNP.sp  kemKE_FSXY.sp  running-example.sp
examples/proverif/: unlinkability-examples_U2F-counters.pv
examples/smt-csf-2025/: README.md  axioms-core.sp  canauth.sp  (+15 more)
html_output/: README  README.md  page.html  script.js  style.css
licence/: LICENCE.mit
licenses/: MIT
scripts/: Makefile  git-hash  plot.py  sed.py  tutorial-examples.sh  visualisation.html  visualisation_script.js  visualisation_style.css
src/: .merlin  _tags  action.ml  action.mli  atom.ml  atom.mli  bformula.ml  bformula.mli  bullets.ml  bullets.mli  cca.ml  channel.ml  channel.mli  checks.ml  command.ml  commit.ml.in  commit.mli  commonTactics.ml  commonTactics.mli  completion.ml  completion.mli  config.ml  config.mli  constr.ml  constr.mli  decl.ml  decl.mli  dh.ml  driver.ml  dune  encRandom.ml  encRandom.mli  env.ml  env.mli  equiv.ml  equiv.mli  equivSequent.ml  equivSequent.mli  equivTactics.ml  equivTactics.mli  (+142 more)
src/core/: action.ml  action.mli  atom.ml  benchmark.ml  benchmark.mli  channel.ml  channel.mli  command.ml  completion.ml  completion.mli  computePredicates.ml  computePredicates.mli  concrete.ml  config.ml  config.mli  constr.ml  constr.mli  crypto.ml  crypto.mli  decl.ml  decl.mli  dune  encRandom.ml  encRandom.mli  env.ml  env.mli  equiv.ml  equiv.mli  equivSequent.ml  errors.ml  errors.mli  goal.ml  goal.mli  highTacticsArgs.ml  highTacticsArgs.mli  highTerm.ml  highTerm.mli  hint.ml  hint.mli  hyps.ml  (+114 more)
src/frontend/: bullets.mli  dune  feedback.ml  lexer.mll  parser.mly  parserbuf.ml  parserbuf.mli  sedlexer.ml
src/prover/: bullets.ml  bullets.mli  driver.ml  dune  errors.ml  prover.ml  prover.mli
src/tactics/: cca.ml  cca.mli  dh.ml  dh.mli  dune  equivTactics.ml  equivTactics.mli  euf.ml  euf.mli  fresh.ml  freshtmp.mli  highTactics.ml  intctxt.ml  intctxt.mli  oldcca.ml  prf.ml  prf.mli  randomnessOccurrences.ml  randomnessOccurrences.mli  rwOracle.ml  rwOracle.mli
src/toplevel/: dune  foo.c  topLevel.ml  topLevel.mli
src/visualisation/: dune  html.ml  htmlLexer.mll  htmlParser.mly  server.mli  server.real.ml  server.stub.ml  visualisation.ml
tex/: Makefile  biblio.bib  encryption.tex  figs-semantics.tex  indistinguishability.tex  logic.tex  macros.tex  main.tex  msc5.sty  proof.sty  protocols.tex  reachability.tex  semantics.tex
theories/: 0-logic.sp  Basic.sp  Classic.sp  Core.sp  Deduction.sp  DeductionSyntax.sp  Int.sp  Logic.sp  PostQuantum.sp  Prelude.sp  Real.sp  Reify.sp  Set.sp  String.sp  WeakSecrecy.sp  pure_trace_model.why  pure_trace_model_abs.why  pure_trace_model_abs_eq.why  trace_model.why  trace_model_abs.why  trace_model_abs_eq.why  trace_model_abs_noeq.why  trace_model_int.why
utils/: metabc-syntax.el  metabc.el  squirrel-syntax.el  squirrel.el
(+987 files in other folders)
