(env
 (_
  (js_of_ocaml
   (flags (:standard --enable effects --enable pretty --linkall))
   (build_runtime_flags (:standard --enable effects --enable pretty
                                   --toplevel)))))

(executable
  (name squirrel)
  (libraries squirrellib)
  (link_flags -linkall -g)
  (modules squirrel))

; needs js_of_ocaml and some other deps
(executable
  (name jsexport)
  (promote)
  (libraries squirrellib)
  (modes js)
  (preprocess (pps js_of_ocaml-ppx))
  (modules jsexport))

(test
  (name test)
  (libraries squirrellib squirreltests)
  (modules test)
  (action (run %{test} --compact))
  ;; some tests rely on *.sp files in tests/ and theories/
  (deps (source_tree tests) (source_tree theories)) 
  (instrumentation (backend bisect_ppx)))

(rule
  (alias mytest)
  (deps (source_tree tests) (source_tree theories)) 
  (action 
   (progn
    (with-outputs-to tests.output 
     ;; keep going anyway to enrich tests.output
          (with-accepted-exit-codes (or 0 1)
            (run ./test.exe)))
    ))
  )
