opam-version: "2.0.4"
name: "metabc"
description: "metabc"
version: "0.1"
build: [
  [make]
  [make "test"] {with-test}
  [make "doc"] {with-doc}
]

depends: [
  "fmt"
  "ocamlgraph"
  "alcotest"
  "menhir"
  "pcre"
  "bisect_ppx" {dev & >= "2.0.0"}
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]
