opam-version: "2.0"
name: "squirrel"
synopsis: "The Squirrel Prover is a proof assistant for protocols, based on first-order logic and provides guarantees in the computational model"
version: "0.15"
homepage: "https://squirrel-prover.github.io/"
bug-reports: "https://github.com/squirrel-prover/squirrel-prover/issues"
maintainer: "Charlie Jacomme <charlie.jacomme@cispa.de>"
authors: "David Baelde, Stéphanie Delaune, Charlie Jacomme, Adrien Koutsos, Solène Moreau"
build: [
  [make]
  [make "test"] {with-test}
  [make "doc"] {with-doc}
]

depends: [
  "ocaml" {>= "4.10"}
  "fmt" {>= "0.8.7"}
  "ocamlgraph"
  "alcotest"
  "ppx_inline_test"
  "menhir" {>= "20180523"}
  "menhirLib"
  "pcre"
  "conf-which" {build}
]

depopts: [
  "why3"
  "alt-ergo"
]

install: [make "PREFIX=%{prefix}%" "install"]
