opam-version: "2.0"
name: "squirrel"
synopsis: "The Squirrel Prover is a proof assistant for protocols, based on first-order logic and provides guarantees in the computational model"
version: "0.16"
homepage: "https://squirrel-prover.github.io/"
bug-reports: "https://github.com/squirrel-prover/squirrel-prover/issues"
maintainer: "Charlie Jacomme <charlie.jacomme@cispa.de>"
authors: "David Baelde, Stéphanie Delaune, Charlie Jacomme, Adrien Koutsos, Solène Moreau"
build: [
  [make]
  [make "test"] {with-test}
  [make "doc"] {with-doc}
]

depends: [
  "ocaml" {= "5.0.0"}
  "fmt" {>= "0.8.7"}
  "ocamlgraph"
  "alcotest"
  "sedlex"
  "ppx_inline_test"
  "menhir" {>= "20180523"}
  "menhirLib"
  "conf-which" {build}
]

depopts: [
  "why3"
  "alt-ergo"
  "js_of_ocaml"
  "js_of_ocaml-tyxml"
  "ppx_deriving_yojson"
  "dream"
]

install: [make "PREFIX=%{prefix}%" "install"]
