(library
  (name jsquirrel)
  (modes byte native)
  (flags :standard -w -39)
  (library_flags (:standard -linkall))
  (preprocess (staged_pps lwt_ppx ppx_import ppx_deriving_yojson))
  (libraries squirrelprover squirrelcore squirreltactics js_of_ocaml-compiler
    yojson ppx_deriving_yojson.runtime))
